welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
while(!sortieTrouvee){
^Poucet:7: error: ')' expected but 'if' found.
  	if (nbBiscuit==3) {
        ^Poucet:13: error: ';' expected but 'if' found.
  if (sortieTrouvee(){
  ^